Put an Invalidate call in ::Reflow when the image has changed - image was not repainting before. b=21225 r=buster